# llama.cpp

ggml/src/: gguf.cpp
src/: llama-model-loader.cpp  llama-model-loader.h
tools/: CMakeLists.txt
tools/gguf-extract-meta/: CMakeLists.txt  gguf-extract-meta.cpp
tools/gguf-mem/: CMakeLists.txt  PATCHES.md  README.md  USAGE.md  gguf-mem.cpp
